fix: weather comparison - prevent comparing 2 the same cities

--- a/src/components/weatherComparison/weatherComparison.css
+++ b/src/components/weatherComparison/weatherComparison.css
@@ -52,5 +52,6 @@
 .weather-chosenCity {
     display: flex;
     align-items: center;
-    max-height: 20vh;
+    max-height: 40vh;
+    padding: 15px;
 }
