--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../assets/sky.jpg');
+    background-image: url('../../../public/assets/sky.jpg');
     margin: 0;
     background-position: 70% 35%;
     background-size: cover;
