--- a/src/pages/city/components/current_weather/current_weather.css
+++ b/src/pages/city/components/current_weather/current_weather.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   max-width: max-content;
   min-width: 60vh;
   border: 4px solid #4B9CD3;
