--- a/src/pages/city/components/weather_comparison/weather_comparison.css
+++ b/src/pages/city/components/weather_comparison/weather_comparison.css
@@ -7,6 +7,7 @@
     font-weight: 500;
     font-family: 'Noto Sans';
     border-top: 4px solid #4b9cd3;
+    width:90%;
 
 }
 .weather-comparison-title {
